changes to index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main class="container-fluid mt-2">
       <!-- ! this is the start of section one -->
       <section
-        class="section-one d-flex justify-content-between container mt-5"
+        class="section-one d-flex justify-content-around container-fluid mx-auto mt-5"
       >
         <div class="row d-flex justify-content-center flex-column">
           <h1 class="display-4 col-lg-6 text-start w-100">
@@ -269,21 +269,21 @@
           </p>
         </div>
         <div
-          class="d-flex flex-wrap justify-content-center align-items-center gap-3 container text-uppercase"
+          class="d-flex flex-wrap justify-content-center align-items-center gap-3 container text-capitalize"
         >
           <div>
             <div class="d-flex justify-content-between align-items-end">
-              <p>html</p>
-              <p class="percent">80%</p>
+              <p>html and css</p>
+              <p class="percent">97%</p>
             </div>
 
             <div>
-              <progress value="80" max="100"></progress>
+              <progress value="97" max="100"></progress>
             </div>
           </div>
           <div class="">
             <div class="d-flex justify-content-between align-items-center">
-              <p>html</p>
+              <p>javascript</p>
               <p class="percent">80%</p>
             </div>
 
@@ -293,45 +293,45 @@
           </div>
           <div class="">
             <div class="d-flex justify-content-between align-items-end">
-              <p>html</p>
-              <p class="percent">80%</p>
+              <p>react.js</p>
+              <p class="percent">70%</p>
             </div>
 
             <div>
-              <progress value="80" max="100"></progress>
+              <progress value="70" max="100"></progress>
             </div>
           </div>
 
           <div>
             <div class="d-flex justify-content-between align-items-end">
-              <p>html</p>
-              <p class="percent">80%</p>
+              <p>jQuery</p>
+              <p class="percent">85%</p>
             </div>
 
             <div>
-              <progress value="80" max="100"></progress>
+              <progress value="85" max="100"></progress>
             </div>
           </div>
 
           <div>
             <div class="d-flex justify-content-between align-items-end">
-              <p>html</p>
-              <p class="percent">80%</p>
+              <p>bootstrap</p>
+              <p class="percent">92%</p>
             </div>
 
             <div>
-              <progress value="80" max="100"></progress>
+              <progress value="92" max="100"></progress>
             </div>
           </div>
 
           <div>
             <div class="d-flex justify-content-between align-items-end">
-              <p>html</p>
-              <p class="percent">80%</p>
+              <p>SQL</p>
+              <p class="percent">60%</p>
             </div>
 
             <div>
-              <progress value="80" max="100"></progress>
+              <progress value="60" max="100"></progress>
             </div>
           </div>
         </div>
@@ -407,9 +407,10 @@
 
           <div class="col col-lg-7">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              cumque impedit in rerum, aspernatur nobis, consectetur sed ipsam
-              sequi excepturi aut qui. Nisi, recusandae eligendi!
+              This is a standard ludo game that is designed by me, Ludo is a
+              popular board game played mostly in Africa and Asia, this game can
+              be played by 2,3 or 4 players, it has four houses that can be
+              shared among the players.
             </p>
           </div>
         </div>
