--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body class="text-white">
+  <body class="text-white bg-black">
     <header>
       <nav class="navbar navbar-expand-lg bg-black text-light">
         <div class="container-fluid">
