--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body class="text-white bg-black">
     <header>
-      <nav class="navbar navbar-expand-lg mb-3 text-light sticky-top">
+      <nav class="navbar navbar-expand-lg mb-3 text-light">
         <div class="container-fluid">
           <h3 class="navbar-brand col-lg-7 logo text-primary" href="#">
             peter<span id="sambo" class="text-danger">Sambo</span>
@@ -390,6 +390,11 @@
               data-bs-slide-to="2"
               aria-label="Third slide"
             ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="3"
+              aria-label="Forth slide"
+            ></li>
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
@@ -419,6 +424,17 @@
                 src="assets/vr.png"
                 class="w-100 d-block"
                 alt="Third slide"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h3></h3>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/ludo.png"
+                class="w-100 d-block"
+                alt="Forth slide"
               />
               <div class="carousel-caption d-none d-md-block">
                 <h3></h3>
