added a picture beside dropdown menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             /></span>
           </button>
           <div
-            class="collapse navbar-collapse justify-content-between"
+            class="collapse navbar-collapse justify-content-between dropdown-pic"
             id="navbarSupportedContent"
           >
             <ul class="navbar-nav mb-2 mb-lg-0">
