added the toggle in which i want to use to switch between dark and light mode

--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
+              <div class="tcontainer my-auto" id="t-container">
+                <div
+                  class="circle-toggle"
+                  id="circle-one"
+                  style="background-color: white"
+                ></div>
+                <div class="circle-toggle" id="circle-two"></div>
+              </div>
             </ul>
           </div>
         </div>
