added an alert to the projects section

--- a/index.html
+++ b/index.html
@@ -469,6 +469,23 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
+        <div
+          class="alert alert-danger alert-dismissible fade show"
+          role="alert"
+        >
+          <button
+            type="button"
+            class="btn-close btn-sm"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+
+          <strong>Wait!</strong> You can also
+          <a href="www.gihub.com/peter2great2" style="color: blue"
+            >click here</a
+          >
+          to see all my projects they are all live on github.
+        </div>
       </div>
       <section class="section-eight mt-3">
         <div class="container text-center">
